k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-test-svc
spec:
  type: ClusterIP
  selector:
    app: django-test
  ports:
    - ports: 8000
      targetPort: 8000
