k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
    rules:
      - host: app.silkensway.com
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: django-test-svc
                  port:
                    number: 8000
